docs/0.13/_sources/api/gammapy.utils.fitting.Parameters.rst.txt
Parameters
==========

.. currentmodule:: gammapy.utils.fitting

.. autoclass:: Parameters
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameters.correlation
      ~Parameters.free_parameters
      ~Parameters.names
      ~Parameters.parameters
      ~Parameters.restore_values

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameters.autoscale
      ~Parameters.copy
      ~Parameters.covariance_to_table
      ~Parameters.error
      ~Parameters.freeze_all
      ~Parameters.from_dict
      ~Parameters.set_covariance_factors
      ~Parameters.set_error
      ~Parameters.set_parameter_errors
      ~Parameters.set_parameter_factors
      ~Parameters.to_dict
      ~Parameters.to_table

   .. rubric:: Attributes Documentation

   .. autoattribute:: correlation
   .. autoattribute:: free_parameters
   .. autoattribute:: names
   .. autoattribute:: parameters
   .. autoattribute:: restore_values

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: copy
   .. automethod:: covariance_to_table
   .. automethod:: error
   .. automethod:: freeze_all
   .. automethod:: from_dict
   .. automethod:: set_covariance_factors
   .. automethod:: set_error
   .. automethod:: set_parameter_errors
   .. automethod:: set_parameter_factors
   .. automethod:: to_dict
   .. automethod:: to_table
